[project]
name = "st"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rainzee", email = "rainzee.w@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.ruff]
line-length = 128
target-version = "py313"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
